Removed redundant reloadTodoList, added an alert in the switch default, fixed css alignment

--- a/public/main.css
+++ b/public/main.css
@@ -43,7 +43,7 @@ h1 {
 }
 
 .incomplete-counter {
-    align-content: center;
+    text-align: center;
     padding: 10px;
     background-color: #4a412a;
     color: white;
